# pysh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config_api.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: ci.yml  freebsd-pkg.yml  publish.yml  release-artifacts.yml
docs/: ISSUE-2-refactor-source-tree.md  README.md  builtins.md  command-planning.md  configuration.md  development.md  documentation-policy.md  installation.md  limitations.md  migration.md  multiline-paste.md  operators.md  packaging.md  pysh-issue-backlog.md  python-command-execution-layer.md  python-runtime.md  release.md  roadmap.md  security-sensitive-input.md  system-profile.md  usage.md  zsh-compatibility.md
docs/architecture/: ISSUE-2-refactor-source-tree.md  ISSUE-3-architecture-contracts.md  architecture.md  completion-engine-contract.md  documentation-policy.md  error-exit-code-contract.md  heredoc-contract.md  job-control-contract.md  observability-diagnostics-contract.md  parser-expansion-contract.md  path-expansion-contract.md  pysh-issue-backlog.md  roadmap.md  script-mode-contract.md  security-trust-model.md  signal-handling.md  source-tree.md
docs/compatibility/: README.md  bash-scope.md  feature-matrix.md  posix-sh-scope.md  shell-compatibility-contract.md  system-shell-integration-policy.md  unsupported-constructs.md  validation-matrix.md  xonsh-comparison.md  zsh-scope.md
docs/development/: completion-engine.md  configuration-system.md  context-engineering.md  development.md  history-engine.md  packaging.md  prompt-engine.md  release.md  repository-structure.md  syntax-highlighting.md
docs/issues/: 31-user-configuration-profiles-and-themes.md  65-windows-platform-feasibility-study.md  66-powershell-launch-and-compatibility-layer.md  67-cross-platform-path-and-environment-translation.md  68-vscode-terminal-integration.md
docs/migration/: migration.md  zsh-compatibility.md
docs/plugins/: plugin-api.md  plugin-guide.md
docs/python/: python-command-execution-layer.md  python-runtime.md
docs/roadmap/: ROADMAP-v1-2.md
docs/shell/: command-planning.md  multiline-paste.md  security-sensitive-input.md  system-profile.md
docs/user/: builtins.md  completion.md  configuration.md  history.md  installation.md  limitations.md  midnight-commander.md  operators.md  prompt.md  syntax-highlighting.md  themes.md  usage.md
examples/plugins/: example_plugin.py
packaging/debian/: README.md  control  copyright  postinst  prerm
packaging/rpm/: README.md  pysh-shell.spec
packaging/wrappers/: pysh.sh
pysh/tests/: test_shell.py
scripts/: _pysh_version.sh  build_deb.sh  build_freebsd_pkg.sh  build_pysh_package.sh  build_release_artifacts.sh  build_rpm.sh  check_headers.sh  check_release_artifacts.sh  check_release_quality.sh
src/pysh/: __init__.py  __main__.py  cli.py  colors.py  command_plan.py  completion.py  config_api.py  highlighting.py  history.py  mc_compat.py  parser.py  plugins.py  pyinit.py  python_highlight.py  python_mode.py  python_runtime.py  python_terminal_render.py  rc.py  redirection.py  script_runner.py  secure_runner.py  service.py  shell.py  shell_bak.py
src/pysh/compat/: __init__.py  mc.py  profile_importer.py  zsh_aliases.py  zsh_bridge.py  zsh_diagnostics.py
src/pysh/config/: __init__.py  alias_packs.py  api.py  diagnostics.py  paths.py  plugins.py  profiles.py  rc.py  runtime.py  schema.py  themes.py  toml_loader.py
src/pysh/contracts/: __init__.py  builtins.py  protocols.py
src/pysh/core/: __init__.py  errors.py  jobs.py  shell.py  signals.py
src/pysh/diagnostics/: __init__.py  command_plan.py  system_info.py  trace.py
src/pysh/editor/: __init__.py  completion.py  highlight.py  history.py
src/pysh/editor/lineedit/: __init__.py  autosuggest.py  buffer.py  completion.py  highlight.py  keys.py  reader.py
src/pysh/lineedit/: autosuggest.py  buffer.py  highlight.py  keys.py  reader.py
src/pysh/migration/: __init__.py  script.py
src/pysh/parsing/: __init__.py  ast.py  errors.py  expansion.py  grammar.py  heredoc.py  lexer.py  multiline.py  parser.py  path_expansion.py  redirection.py
src/pysh/plugins/: __init__.py  api.py  errors.py  loader.py  manager.py  models.py  names.py  registry.py  version.py
src/pysh/prompt/: __init__.py  colors.py  system_profile.py  terminal_style.py
src/pysh/python_layer/: __init__.py  highlighting.py  mode.py  render.py  runtime.py
src/pysh/security/: __init__.py  policy.py  secure_runner.py
src/pysh/services/: __init__.py  pyinit.py  service.py
tests/: __init__.py  test_alias_packs.py  test_architecture_import_boundaries.py  test_cli.py  test_colors.py  test_command_builtin.py  test_command_plan.py  test_comments.py  test_completion.py  test_completion_engine.py  test_config_check.py  test_config_paths.py  test_config_schema.py  test_config_toml_loader.py  test_cursor_color.py  test_dirstack.py  test_docs_compatibility_contract.py  test_docs_consistency.py  test_editor_options.py  test_env_assignment.py  test_error_exit_code_contract.py  test_expansion_foundation.py  test_heredoc.py  test_highlighting.py  test_history.py  test_import_time_budget.py  test_job_control.py  test_lineedit_autosuggest.py  test_lineedit_buffer.py  test_lineedit_completion.py  test_lineedit_highlight.py  test_lineedit_keys.py  test_lineedit_reader_pty.py  test_mc_compat.py  test_migration.py  test_multiline_grammar.py  test_multiline_paste.py  test_observability_diagnostics.py  test_parser.py  test_parser_foundation.py  (+42 more)
