# SPDX-License-Identifier: GPL-3.0-or-later
#
# Project: PySH - Python-first interactive shell for Debian and Unix-like systems
# File: pyproject.toml
# Repository: https://github.com/SSobol77/pysh
# PyPI: https://pypi.org/project/pysh-shell
#
# Copyright (c) 2026 Siergej Sobolewski
#
# Licensed under the GNU General Public License v3.0 or later.
# See the LICENSE file in the project root for full license text.
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pysh-shell"
version = "0.1.1"
description = "Python-first interactive shell for Debian and Unix-like systems"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
authors = [{ name = "Siergej Sobolewski" }]
keywords = ["shell", "python", "terminal", "cli", "debian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/SSobol77/pysh"
Repository = "https://github.com/SSobol77/pysh"
Issues = "https://github.com/SSobol77/pysh/issues"

[project.scripts]
pysh = "pysh.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "build>=1.2", "twine>=5.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pysh"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]
