# SPDX-License-Identifier: GPL-2.0-only
#
# Copyright (C) 2026 Siergej Sobolewski

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pysh-shell"
version = "0.8.2"
description = "PySH — fast, Python-first universal interactive shell for Debian and Unix-like systems."
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-2.0-only"
authors = [
    { name = "Siergej Sobolewski", email = "siergej@proton.me" },
    { name = "Karol Sobolewski", email = "karl.sobolewski@outlook.com" },
]
dependencies = []
keywords = ["shell", "python", "terminal", "cli", "debian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/SSobol77/pysh"
Repository = "https://github.com/SSobol77/pysh"
Issues = "https://github.com/SSobol77/pysh/issues"

[project.scripts]
pysh = "pysh.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "build>=1.2", "twine>=5.0", "pygments>=2.0"]
highlight = ["pygments>=2.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pysh"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/CHANGELOG.md", "/LICENSE", "/pyproject.toml"]

[dependency-groups]
dev = [
    "build>=1.2",
    "pygments>=2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "twine>=5.0",
]
